[package]
name = "forge-endpoints"
version = "0.1.0"
edition = "2021"
description = "A SDK for retreiving information from the Ergo blockchain"
documentation = "https://docs.rs/ergo-endpoints"
repository = "https://github.com/rust-ergo/rustkit"
readme = "README.md"
homepage = "https://github.com/rust-ergo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
forge-types = "0.1.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.199"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }