[package]
name = "forge-kit"
version = "0.1.0"
edition = "2021"
description = "A SDK for building on the Ergo blockchain"
documentation = "https://docs.rs/forge-kit"
repository = "https://github.com/rust-ergo/forge"
readme = "README.md"
homepage = "https://github.com/rust-ergo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
