[package]
name = "forge-types"
version = "0.1.0"
edition = "2021"
description = "Ergo blockchain types"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-chain-types = "0.14.1"
ergo-lib = "0.27.1"
num-bigint = "0.4.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "1.11.0"

[dev-dependencies]
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
